--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -1,1 +1,276 @@
 /* pages/card/card.wxss */
+
+
+
+.section{
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  background: #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.card{
+  padding: 0;
+  margin: 0;
+}
+.card-wrapper{
+  padding: 15px;
+  background: #f5fafe;
+}
+.user-info_pic{
+  width: 100%;
+}
+.user-info_pic image{
+  width: 100%;
+  
+}
+.user-info_desc{
+  padding: 5px 10px;
+}
+.name{
+  font-size: 15px;
+  color: #010101;
+ 
+}
+.sex{
+  margin-left: 7px;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-size: contain;
+}
+.sex image{
+  width: 100%;
+  height: 100%;
+}
+.user-info_personality{
+  margin-left: 5px;
+  margin-bottom: 5px;
+  text-align: left;
+}
+.user-info_personality .label1{
+  margin-right: 5px;
+  color: #fff;
+  display: inline-block;
+  font-size: 9px;
+  height: 19px;
+  width: 40px;
+  line-height: 19px;
+  background: #48a6fd;
+  text-align: center;
+  border-radius: 3px;
+}
+.user-info_personality .label2{
+  margin-right: 5px;
+  display: inline-block;
+  color: #fff;
+  font-size: 9px;
+  height: 19px;
+  width: 60px;
+  line-height: 19px;
+  background: #1dca43;
+  text-align: center;
+  border-radius: 3px;
+}
+.user-info_personality .label3{
+  margin-right: 5px;
+  display: inline-block;
+  color: #fff;
+  font-size: 9px;
+  height: 19px;
+  width: 52.5px;
+  line-height: 19px;
+  background: #fb8800;
+  text-align: center;
+  border-radius: 3px;
+}
+.user-info_details{
+  position: relative;
+  margin-left: 8px;
+  width: 345px;
+  
+}
+.details_info{
+  position: relative;
+  width: 150px;
+  height: 24px;
+  display: inline-block;
+}
+.details_info_pic{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 9px;
+}
+.details_info_pic image{
+  width: 100%;
+  height: 100%
+}
+
+.details_info_text{
+  width: 60px;
+  height: 20px;
+  display: inline-block;
+  font-size: 12px;
+  color: #999999;
+  position: absolute;
+  top: 0;
+  left: 19px;
+}
+.user-info_Qr_code{
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  right:12px ;
+  top: -31px;
+}
+.user-info_Qr_code image{
+  width: 100%;
+  height: 100%;
+}
+.user-info_hongbaoPic{
+  width: 56px;
+  height: 50px;
+  position: absolute;
+  right: 4px;
+  bottom: -16px;
+  z-index: 99;
+}
+.user-info_hongbaoPic image{
+  width: 100%;
+  height: 100%;
+ 
+}
+.myVisitors{
+  position: relative;
+  margin-bottom: 0;
+}
+.side{
+  margin-left: 10px;
+  display: inline-block;
+  padding-top: 10px;
+  
+}
+.main{
+  position: relative;
+  margin-left: 33px;
+  display: inline-block;
+  height: 35px;
+  width: 154px ;
+   
+}
+.main text{
+  position: absolute;
+  left: 0;
+  top: 10px;
+  color: #333333;
+  font-size: 12px;
+}
+
+.myVisitors_pic{
+  display: inline-block;
+  overflow: hidden;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: #000000;
+  margin-right: 5px;
+}
+.myVisitors_pic image{
+  width: 100%;
+  height: 100%;
+}
+.rightArrow{
+  position: absolute;
+  top: 18.5px;
+  right: 11.5px;
+  height: 10px;
+  width: 7px;
+  display: inline-block;
+}
+.rightArrow image{
+  width: 100%;
+  height: 100%;
+  
+}
+.provide{
+  position: relative;
+  margin-top: 10px;
+  height: 85px;
+ 
+  padding-top: 10px;
+  padding-left: 10px;
+ 
+
+}
+.color{
+  position: absolute;
+  left: 0px;
+  top: 18px;
+  width: 3px;
+  height: 15px;
+  background-color: #1dca42;
+  
+}
+.provide_title{
+  margin-top: 5px;
+  font-size: 15px;
+  color: #010101; 
+  font-weight: 600;
+}
+.provide_describe{
+  margin-top: 11px;
+  
+}
+.provide_describe text{
+  font-size: 12px;
+  color: #333333;
+  
+}
+.pic{
+  overflow: hidden;
+  border-radius: 5px;
+  margin-left: 2px;
+  width: 342px;
+  height: 120px;
+}
+.pic image{
+  width: 100%;
+  height: 100%;
+}
+
+.pics{
+  display: inline-block;
+  width: 101px;
+  height: 60px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-left: 4px;
+}
+.pics image{
+  width: 100%;
+  height: 100%;
+}
+.last{
+  display: flex;
+  margin-top: 21px; 
+}
+.btn{
+  display: flex;
+  width: 330px;
+  height: 49px;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 25px;
+}
+.lastMain{
+  background-color: #48a6fd;
+  color: #ffffff;
+  margin-right: 6.5px;
+}
+.btn image{
+  width: 15.5px;
+  height: 15.5px;
+}
